create post form

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,8 +10,10 @@
     </head>
     <body>
         <%- include('_header'); %>
-
-        <%- body %>
+        <main>
+            <%- body %>
+        </main>
+        
         
         <%- include('_footer'); %>
         <%- script -%>
