--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,5 +1,5 @@
 <h1>sign in</h1>
-<form action="users/create-session" method="post">
+<form action="/users/create-session" method="post">
  <input type="email" name="email" placeholder="email" required id="">
 <input type="password" name="password" placeholder="password" required id="">
 <input type="submit" value="Sign In">
