--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,4 @@
-body{
-    margin: 0;
-    /* text-align: center; */
-}
+body {
+  margin: 0px;
+  font-family: sans-serif;
+  /* text-align: center; */ }
