--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,24 @@
+<link rel="stylesheet" href="/css/header.css">
 <header>
-    page header
+
+    <h2>Codial</h2>
+
+    <ul>
+       <% if(locals.user){ %>
+        <li>
+           <a href="/users/profile">  <%= user.name %></a> 
+        </li>
+        <li>
+            <a href="/users/sign-out" >sign Out</a>
+        </li>
+        <% }else{ %>
+        <li>
+            <a href="/users/sign-in">Sign In</a>
+        </li>
+        <li>
+            <a href="/users/sign-up">Sign Up</a>
+        </li>
+        <%}%>
+    </ul>
+
 </header>
