--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,16 @@
 
-    <h1>Codial / home page</h1>
+<h1>
+    Codial / home page
+</h1>
+<section id='feed-post'>
+<h4>Posts</h4>
+<form action="" method="post">
+        <textarea name="content" id="" cols="30" rows="10"></textarea>
+        <input type="submit" value="Post">
+
+</form>
+</section>
+
+
+
 
