--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,22 @@
 </h1>
 <section id='feed-post'>
 <h4>Posts</h4>
-<form action="" method="post">
+<form action="/posts/create" method="post">
         <textarea name="content" id="" cols="30" rows="10"></textarea>
         <input type="submit" value="Post">
 
 </form>
+
+<div id="posts-list-container">
+    <ul>
+       <% for(post of posts){%>
+        <li>
+            <%=post.content%>
+        </li> 
+        <% }%>
+    </ul> 
+
+</div>
 </section>
 
 
