--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,17 +4,24 @@
 </h1>
 <section id='feed-post'>
 <h4>Posts</h4>
+<% if(locals.user){ %>
 <form action="/posts/create" method="post">
         <textarea name="content" id="" cols="30" rows="10"></textarea>
         <input type="submit" value="Post">
 
 </form>
-
+<% } %>
 <div id="posts-list-container">
     <ul>
        <% for(post of posts){%>
-        <li>
-            <%=post.content%>
+        <li><p>
+                <%=post.content%> 
+                    <br>
+                    <small>
+                        <%=post.user.name%>
+                    </small>
+                
+            </p>
         </li> 
         <% }%>
     </ul> 
