--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <h4>Posts</h4>
 <% if(locals.user){ %>
 <form action="/posts/create" method="post">
-        <textarea name="content" id="" cols="30" rows="10"></textarea>
+        <textarea name="content" id="" cols="30" rows="10" required></textarea>
         <input type="submit" value="Post">
 
 </form>
@@ -22,6 +22,32 @@
                     </small>
                 
             </p>
+            <div class="post-comments">
+                <% if(locals.user) {%>
+                <form action="/comments/create" method="post" >
+                    <input type="text" name="content" id="" placeholder="type here to add comment..." required>
+                    <input type="hidden" name="post" id="" value="<%= post._id %>">
+                    <input type="submit" value="add comment">
+               
+                </form>
+                
+                    <% } %>    
+            </div>
+            <div class="post-comments-list">
+                <ul id="post-comments-<%= post._id %>">
+                    <% for(comment of post.comments){ %>
+                        <p>
+                            <%= comment.content %>
+                            <br>
+                            <small>
+                                <%= comment.user.name %>
+                            </small>
+
+                        </p>
+                        
+                        <% } %>
+                </ul>
+            </div>
         </li> 
         <% }%>
     </ul> 
